--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
-
+.vscode
 # dependencies
 /meet-your-star-wars-lover/node_modules
 
